# Gossip

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.cursor/rules/: git-commit.mdc
.github/workflows/: ci.yml
docs/: event-flow.md
docs/api/: README.md  chatroom.md  notification.md  plugins.md
docs/events/: create-room.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: init.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/infrastructure/server/: route.rs
src-tauri/src/application/repository/: chatrooms.rs  mod.rs
src-tauri/src/application/service/: chatroom.rs
src-tauri/src/application/usecase/: mod.rs
src-tauri/src/application/usecase/chatroom/: create.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/chatroom/: create.rs  mod.rs
src-tauri/src/commands/plugins/: mod.rs
src-tauri/src/domain/models/: chat.rs  mod.rs  plugin.rs  state.rs
src-tauri/src/domain/models/events/: mod.rs  notification.rs
src-tauri/src/domain/ports/: chatroom.rs  external_notifier_port.rs  user.rs
src-tauri/src/domain/repository/: chatroom.rs
src-tauri/src/domain/service/: chatroom.rs  mod.rs
src/components/: KeyboardShortcutsModal.tsx
src/hooks/: useChatMessages.ts  useChatRoom.ts  useRoomCreation.ts  useRoomJoining.ts
src/layouts/: AppLayout.tsx
src/pages/: AppHome.tsx  AppSettings.tsx  ChatRoom.tsx
(+17 files in other folders)
