[package]
name = "gossip"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gossip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.9", features = [] }
tauri-plugin-opener = "2.0.0-beta.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.40", features = ["serde"] }
actix-web = { version = "4.0.0", features = [] }
tokio = { version = "1.44.1", features = ["full", "rt-multi-thread", "macros"] }
uuid = { version = "1.16.0", features = ["v7"] }
actix = "0.13"
actix-web-actors = "4.1"
anyhow = "1.0.97"
rmp-serde = "1.1.2"
bytes = "1.4.0"
